--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,11 @@
-<nav class="header">
-  <a href="#" class="logo">cocktails</a>
+<nav
+  class="
+    d-flex
+    flex-row flex-justify-content-between flex-align-items-center
+    p-10
+  "
+>
+  <a href="#" class="logo p-20">cocktails</a>
   <ul>
     <li><a href="#"></a>Recettes</li>
     <li><a href="#"></a>Ingredients</li>
